Font stacks are inadequate, so don't need to be elaborate.

--- a/_uofaweb-variables.scss
+++ b/_uofaweb-variables.scss
@@ -47,5 +47,5 @@ $ash_tint: rgb(247, 249, 249);
 $miloserif: MiloSerifWeb, Georgia, "Times New Roman", "DejaVu Serif", serif;
 $milo: MiloWeb, Verdana, Tahoma, "DejaVu Sans", sans-serif;
 $milotext: "MiloWeb-Text", Verdana, Tahoma, "DejaVu Sans", sans-serif;
-$milomedium: "MiloWeb-Medium", "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+$milomedium: "MiloWeb-Medium", "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
 
