--- a/_bootstrap_button.scss
+++ b/_bootstrap_button.scss
@@ -3,14 +3,14 @@
  * Bootstrap for Sass buttons in many different themed colors.
  */
 
-@each $dcolor in $ua_dark_colors {
-  .btn-#{$dcolor} {
-    @include button-variant($light_foreground, $dcolor, $dcolor);
+@each $d_color_name, $d_color_value in $ua_dark_colors {
+  .btn-#{$d_color_name} {
+    @include button-variant($light_foreground, $d_color_value, $d_color_value);
   }
 }
 
-@each $lcolor in $ua_light_colors {
-  .btn-#{$lcolor} {
-    @include button-variant($dark_foreground, $lcolor, $lcolor);
+@each $l_color_name, $l_color_value in $ua_light_colors {
+  .btn-#{$l_color_name} {
+    @include button-variant($dark_foreground, $l_color_value, $l_color_value);
   }
 }
